--- a/sample/android/src/main/res/values/strings.xml
+++ b/sample/android/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="appName">Top Story</string>
+    <string name="appName">NY Times</string>
 </resources>
